--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "webpack-cli": "^4.5.0"
   },
   "scripts": {
-    "build": "webpack --config webpack.config.js"
+    "build": "webpack --config webpack.config.js && pkg . -t host"
   },
   "author": "Ancientkingg",
   "license": "ISC"
